Init rewards page data

--- a/multi-page-app-with-react-master/src/pages/rewards.html
+++ b/multi-page-app-with-react-master/src/pages/rewards.html
@@ -7,5 +7,6 @@
 <body>
     <div id="rewards"></div>
     <p>Congratulations! Redeem these rewards:-</p>
+    <div id="displa"></div>
 </body>
 </html>
