Pre-Demo changes

--- a/PaniPuri_5150/index.html
+++ b/PaniPuri_5150/index.html
@@ -32,7 +32,7 @@
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#da-navbarNav" aria-controls="da-navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
           <div class="collapse navbar-collapse text-uppercase" id="da-navbarNav">
             <ul class="navbar-nav ml-auto">
-              <li class="nav-item"><a class="nav-link smooth-scroll" href="#services">Features</a></li>
+              <li class="nav-item"><a class="nav-link smooth-scroll" href="http://localhost:3100/App.html">Application</a></li>
               <li class="nav-item"><a class="nav-link smooth-scroll" href="#projects">ML Models</a></li>
               <li class="nav-item"><a class="nav-link smooth-scroll" href="#gallery">Impact</a></li>
               <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
@@ -452,7 +452,7 @@
           <div class="col-md-3">
             <div class="h6 pb-4">Copyright</div>
             <p class="pb-1">&copy; PaniPuri5150. All rights reserved.</p>
-           
+
           </div>
         </div>
       </div>
