--- a/multi-page-app-with-react-master/src/pages/rewards.html
+++ b/multi-page-app-with-react-master/src/pages/rewards.html
@@ -4,9 +4,11 @@
     <meta charset="utf-8">
     <title>Rewards Page</title>
 </head>
-<body>
+<body style="background-color:azure">
     <div id="rewards"></div>
-    <p>Congratulations! Redeem these rewards:-</p>
+    <div style="text-align:center;">
+    <h1>Congratulations! Redeem these rewards:-</h1>
+    </div>
     <div id="displa"></div>
 </body>
 </html>
